@@ -3,7 +3,7 @@ package net.sareweb.android.dParking.adapter;
 import java.net.URLDecoder;
 
 import net.sareweb.android.dParking.R;
-import net.sareweb.android.dParking.exception.NoSuchStationException;
+import net.sareweb.android.dParking.exception.NoSuchParkingException;
 import net.sareweb.android.dParking.model.City;
 import android.content.Context;
 import android.view.LayoutInflater;
@@ -12,26 +12,26 @@ import android.view.ViewGroup;
 import android.widget.BaseAdapter;
 import android.widget.TextView;
 
-public class StationAdapter extends BaseAdapter{
+public class ParkingAdapter extends BaseAdapter{
 
 	private Context context;
 	private City city;
 	
-	public StationAdapter(Context context, City city) {
+	public ParkingAdapter(Context context, City city) {
 		this.context = context;
 		this.city = city;
 	}
 	
 	@Override
 	public int getCount() {
-		return city.getStastionAmount();
+		return city.getParkingAmount();
 	}
 
 	@Override
 	public Object getItem(int i) {
 		try {
-			return city.getStation(new Integer(i));
-		} catch (NoSuchStationException e) {
+			return city.getParking(Integer.valueOf(i));
+		} catch (NoSuchParkingException e) {
 			return null;
 		}
 	}
@@ -47,21 +47,21 @@ public class StationAdapter extends BaseAdapter{
 		if (convertView == null) {
 			LayoutInflater inflater = (LayoutInflater) context
 					.getSystemService(Context.LAYOUT_INFLATER_SERVICE);
-			convertView = inflater.inflate(R.layout.station_entry, null);
+			convertView = inflater.inflate(R.layout.parking_entry, null);
 		}
 		
 		TextView name = (TextView) convertView.findViewById(R.id.name);
 		try {
-			String nameDecoded = URLDecoder.decode(city.getStation(position).getNombre());
+			String nameDecoded = URLDecoder.decode(city.getParking(position).getNombre());
 			name.setText(nameDecoded);
-		} catch (NoSuchStationException e) {
+		} catch (NoSuchParkingException e) {
 			name.setText("Error!");
 		}
 
 		TextView info = (TextView) convertView.findViewById(R.id.info);
 		try {
-			info.setText(city.getStation(position).getBicisDisponibles() + " / " + city.getStation(position).getPlazasTotales());
-		} catch (NoSuchStationException e) {
+			info.setText(city.getParking(position).getPlazasLibres() + " / " + city.getParking(position).getPlazasTotales());
+		} catch (NoSuchParkingException e) {
 			info.setText("Error!");
 		}
 		
